--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="to_be_assigned">To be assigned</string>
     <string name="add">Add</string>
     <string name="add_lecture">Add lecture</string>
+    <string name="hours">Hours:</string>
+    <string name="day">Day:</string>
 </resources>
